# ai-file-organize

./: Cargo.toml  README.md  config.json
src/: lib.rs  main.rs
src/analyze_file/: mod.rs
src/load_config/: mod.rs
test/: config.json
