[package]
name = "ai-file-organize"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.1", features = ["derive"] }
reqwest = { version = "0.11.24", features = ["json", "blocking"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
walkdir = "2.5.0"
